Reduce the build verbosity to minimal

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,8 @@ init:
 - git config --global core.autocrlf true
 install:
 - nuget restore
+build:
+  verbosity: minimal
 test: off
 artifacts:
 - path: '**\*.vsix'
