--- a/OpenInExternalBrowser/OpenInExternalBrowser.csproj
+++ b/OpenInExternalBrowser/OpenInExternalBrowser.csproj
@@ -159,13 +159,19 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="Tvl.VisualStudio.Shell.Utility.10, Version=1.0.0.0, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Tvl.VisualStudio.Shell.Utility.10.1.0.0\lib\net40\Tvl.VisualStudio.Shell.Utility.10.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Tvl.VisualStudio.Text.Utility.10, Version=1.0.0.0, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Tvl.VisualStudio.Text.Utility.10.1.0.0\lib\net40\Tvl.VisualStudio.Text.Utility.10.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="UIAutomationTypes" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommandFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TextViewCommandFilter.cs" />
     <Compile Include="UrlCommandFilter.cs" />
     <Compile Include="UrlCommandFilterProvider.cs" />
   </ItemGroup>
