--- a/OpenInExternalBrowser/packages.OpenInExternalBrowser.config
+++ b/OpenInExternalBrowser/packages.OpenInExternalBrowser.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Tvl.VisualStudio.Shell.Utility.10" version="1.0.0" targetFramework="net45" />
+  <package id="Tvl.VisualStudio.Text.Utility.10" version="1.0.0" targetFramework="net45" />
   <package id="VSSDK.CoreUtility" version="11.0.4" targetFramework="net45" />
   <package id="VSSDK.CoreUtility.11" version="11.0.4" targetFramework="net45" />
   <package id="VSSDK.DTE" version="7.0.4" targetFramework="net45" />
