Update to VSIX v3 for Visual Studio 2017
Fixes #6

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,5 @@
 version: 1.0.{build}
+image: Visual Studio 2015
 configuration: Release
 platform: Any CPU
 init:
@@ -11,4 +12,4 @@ test: off
 artifacts:
 - path: '**\*.vsix'
 cache:
-  - packages -> **\packages.config
+- packages -> **\packages.config
